Cleaned up the project
Added cover support